2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-10 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* doc/sdccman.lyx,
	  src/z80/gen.c,
	  src/z80/main.c,
	  support/regression/tests/bitint.c:
	  Bit-precise types and bit-fields thereof for z80-related (except sm83, which only gets support up to a width of 8 bits for now).

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/main.c,
	  src/mos6502/ralloc.h:
	  Avoid marking the accumulator dirty after a compare operation.

2022-03-10 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/asxxsrc/asmain.c,
	  sdas/asxxsrc/asxxxx.h:
	  Merge all kinds of .if directives from upstream ASxxxx.
	* sdas/asgb/gbpst.c:
	  Enable in sm83 for testing.

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peeph.def:
	  Add rules for redundant stores after loads.
	* device/lib/mos6502/crt0.s:
	  Use ZP for memcpy and memset parameters.

2022-03-09 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* Merge _BitInt branch.

2022-03-09 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bitintbitfield.c:
	  Fix signed bit-precise bit-fields.

2022-03-09 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  src/stm8/gen.c,
	  support/regression/tests/bitint.c,
	  support/regression/tests/bitintarith.c:
	  Multiplicative operators for bit-precise integers.

2022-03-09 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCopt.c,
	  src/stm8/main.c:
	  Improve diagnostics for unimplemented bit-precise operators.

2022-03-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix corner cases in genPointerSet() and genPointerGet().

2022-03-09 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCval.c,